added additional users APIs
