# pkg/swagger/server/restapi/operations/get_users_ou_id.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// GetUsersOuIDHandlerFunc turns a function with the right signature into a get users ou ID handler
+type GetUsersOuIDHandlerFunc func(GetUsersOuIDParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetUsersOuIDHandlerFunc) Handle(params GetUsersOuIDParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetUsersOuIDHandler interface for that can handle valid get users ou ID params
+type GetUsersOuIDHandler interface {
+	Handle(GetUsersOuIDParams) middleware.Responder
+}
+
+// NewGetUsersOuID creates a new http.Handler for the get users ou ID operation
+func NewGetUsersOuID(ctx *middleware.Context, handler GetUsersOuIDHandler) *GetUsersOuID {
+	return &GetUsersOuID{Context: ctx, Handler: handler}
+}
+
+/*
+	GetUsersOuID swagger:route GET /users/ou/{id} getUsersOuId
+
+get metadata of users belonging to the organisational unit
+*/
+type GetUsersOuID struct {
+	Context *middleware.Context
+	Handler GetUsersOuIDHandler
+}
+
+func (o *GetUsersOuID) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetUsersOuIDParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
