# pkg/swagger/server/restapi/operations/get_users_search.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// GetUsersSearchHandlerFunc turns a function with the right signature into a get users search handler
+type GetUsersSearchHandlerFunc func(GetUsersSearchParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetUsersSearchHandlerFunc) Handle(params GetUsersSearchParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetUsersSearchHandler interface for that can handle valid get users search params
+type GetUsersSearchHandler interface {
+	Handle(GetUsersSearchParams) middleware.Responder
+}
+
+// NewGetUsersSearch creates a new http.Handler for the get users search operation
+func NewGetUsersSearch(ctx *middleware.Context, handler GetUsersSearchHandler) *GetUsersSearch {
+	return &GetUsersSearch{Context: ctx, Handler: handler}
+}
+
+/*
+	GetUsersSearch swagger:route GET /users/search getUsersSearch
+
+search users with matched email address and/or display name
+*/
+type GetUsersSearch struct {
+	Context *middleware.Context
+	Handler GetUsersSearchHandler
+}
+
+func (o *GetUsersSearch) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetUsersSearchParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
