# pkg/swagger/server/restapi/operations/get_users_search_responses.go
@@ -1,0 +1,104 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/Donders-Institute/dr-gateway/pkg/swagger/server/models"
+)
+
+// GetUsersSearchOKCode is the HTTP code returned for type GetUsersSearchOK
+const GetUsersSearchOKCode int = 200
+
+/*
+GetUsersSearchOK success
+
+swagger:response getUsersSearchOK
+*/
+type GetUsersSearchOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ResponseBodyUsers `json:"body,omitempty"`
+}
+
+// NewGetUsersSearchOK creates GetUsersSearchOK with default headers values
+func NewGetUsersSearchOK() *GetUsersSearchOK {
+
+	return &GetUsersSearchOK{}
+}
+
+// WithPayload adds the payload to the get users search o k response
+func (o *GetUsersSearchOK) WithPayload(payload *models.ResponseBodyUsers) *GetUsersSearchOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get users search o k response
+func (o *GetUsersSearchOK) SetPayload(payload *models.ResponseBodyUsers) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUsersSearchOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetUsersSearchInternalServerErrorCode is the HTTP code returned for type GetUsersSearchInternalServerError
+const GetUsersSearchInternalServerErrorCode int = 500
+
+/*
+GetUsersSearchInternalServerError failure
+
+swagger:response getUsersSearchInternalServerError
+*/
+type GetUsersSearchInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ResponseBody500 `json:"body,omitempty"`
+}
+
+// NewGetUsersSearchInternalServerError creates GetUsersSearchInternalServerError with default headers values
+func NewGetUsersSearchInternalServerError() *GetUsersSearchInternalServerError {
+
+	return &GetUsersSearchInternalServerError{}
+}
+
+// WithPayload adds the payload to the get users search internal server error response
+func (o *GetUsersSearchInternalServerError) WithPayload(payload *models.ResponseBody500) *GetUsersSearchInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get users search internal server error response
+func (o *GetUsersSearchInternalServerError) SetPayload(payload *models.ResponseBody500) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUsersSearchInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
