# pkg/swagger/swagger.yaml
@@ -66,6 +66,67 @@ paths:
           schema:
             $ref: '#/definitions/responseBody500'
 
+  /users/ou/{id}:
+    get:
+      summary: get metadata of users belonging to the organisational unit
+
+      consumes:
+        - application/json
+
+      produces:
+        - application/json
+
+      parameters:
+        - in: path
+          name: id
+          description: short name of the organisational unit
+          type: string
+          enum: [dcc, dccn, dcn, dcmn]
+          required: true
+
+      responses:
+        200:
+          description: success
+          schema:
+            $ref: '#/definitions/responseBodyUsers'
+        500:
+          description: failure
+          schema:
+            $ref: '#/definitions/responseBody500'
+
+  /users/search:
+    get:
+      summary: search users with matched email address and/or display name
+
+      consumes:
+        - application/json
+
+      produces:
+        - application/json
+
+      parameters:
+        - in: query
+          name: name
+          description: display name
+          type: string
+          required: false
+          
+        - in: query
+          name: email
+          description: email address
+          type: string
+          required: false
+
+      responses:
+        200:
+          description: success
+          schema:
+            $ref: '#/definitions/responseBodyUsers'
+        500:
+          description: failure
+          schema:
+            $ref: '#/definitions/responseBody500'
+
   /collections:
     get:
       summary: get metadata of all collections
